cmake_minimum_required(VERSION 3.17)
project(CIS452_Group1)

set(CMAKE_C_STANDARD 11)

add_subdirectory(Lab2)
#add_subdirectory(Lab3) #This project cannot be run in CLion because it is based around CRTL+C for ending it
add_subdirectory(Lab4)
add_subdirectory(Lab5)
add_subdirectory(Lab6)
add_subdirectory(Project1)
